Initial Quizlet import functionality

--- a/apps/front/src/app/shared/header/header.component.scss
+++ b/apps/front/src/app/shared/header/header.component.scss
@@ -32,6 +32,11 @@ a:hover {
   width: 9vw;
 }
 
+.import-logo {
+  font-size: 10em;
+  color: #5162ff;
+}
+
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   .create-button {
     margin-bottom: 1rem;
