--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top bg-white fs-5 shadow-sm" [hidden]="hidden">
+<nav class="navbar navbar-expand-sm fixed-top bg-white fs-5 shadow-sm" [hidden]="hidden">
   <div class="container-fluid">
     <a [routerLink]="this.cookieService.get('authenticated') ? '/homepage' : ''"><img class="navbar-brand img-fluid mt-1" src="assets/scholarsome-logo-purple-lowercase.svg" width="10%" height="10%"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,15 +9,14 @@
         <li class="nav-item">
           <a class="nav-link text-black" aria-current="page" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" [routerLink]="this.cookieService.get('authenticated') ? '/homepage' : ''">Home</a>
         </li>
-        <li class="btn-group create-button" dropdown>
-          <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle fs-5"
+        <li class="btn-group" dropdown>
+          <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle fs-5 h-100 w-25"
                   aria-controls="dropdown-basic">
             Create <span class="caret"></span>
           </button>
-          <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
-              role="menu" aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" [routerLink]="'create/set'"><fa-icon [icon]="['far', 'clone']"></fa-icon> &nbsp;Study set</a></li>
-            <li role="menuitem"><a class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" (click)="openModal(import)"><fa-icon [icon]="faQ"></fa-icon> &nbsp;Import set</a></li>
+          <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu">
+            <li><a class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" [routerLink]="'create/set'"><fa-icon [icon]="['far', 'clone']"></fa-icon> &nbsp;Study set</a></li>
+            <li><a class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" (click)="openModal(importSet)"><fa-icon [icon]="faQ"></fa-icon> &nbsp;Import set</a></li>
           </ul>
         </li>
       </ul>
@@ -124,8 +123,30 @@
   </div>
 </ng-template>
 
-<ng-template #import>
+<ng-template #importSet>
   <div class="modal-body">
-    Import a study set from Quizlet
+    <div class="d-flex justify-content-end">
+      <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
+        <span aria-hidden="true" class="visually-hidden">&times;</span>
+      </button>
+    </div>
+    <div class="col">
+      <div class="row text-center">
+        <fa-icon [icon]="faQ" class="import-logo"></fa-icon>
+        <div class="fs-3 mb-2">Import a study set from Quizlet</div>
+        <div class="fs-6 text-secondary">Input a link to a Quizlet set, and we'll convert it to a Scholarsome one for you. Make sure it's public.</div>
+      </div>
+    </div>
+    <form class="mt-3" (ngSubmit)="submitImportSet(importSetForm)" #importSetForm="ngForm" ngNativeValidate>
+      <div class="mb-3">
+        <input type="url" class="form-control" id="importSet-link" name="link" placeholder="https://quizlet.com/..." ngModel required>
+        <div *ngIf="importSetRes === 'fail'" class="form-text text-danger">Hmm, looks like something went wrong. Are you sure that the set is public?</div>
+        <div *ngIf="importSetRes === 'parsing'" class="form-text text-danger">Make sure that you input a valid Quizlet link.</div>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary" [disabled]="importSetClicked">
+          <span *ngIf="importSetClicked" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>Import</button>
+      </div>
+    </form>
   </div>
 </ng-template>
