--- a/apps/front/src/app/homepage/homepage.component.html
+++ b/apps/front/src/app/homepage/homepage.component.html
@@ -11,7 +11,7 @@
     <h2>Your sets</h2>
   </div>
   <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100">
-    <div *ngIf="sets.length === 0" class="text-secondary">You haven't created any sets yet. <a [routerLink]="['/create/set']">Create your first one.</a></div>
+    <div *ngIf="sets && sets.length === 0" class="text-secondary">You haven't created any sets yet. <a [routerLink]="['/create/set']">Create your first one.</a></div>
     <a *ngFor="let set of sets;" [routerLink]="['/study-set', set.id]" class="text-decoration-none">
      <div class="col">
         <div class="card shadow set-card" role="button">
