Increase card size and change 404 page

--- a/apps/front/src/app/shared/notfound/notfound.component.html
+++ b/apps/front/src/app/shared/notfound/notfound.component.html
@@ -4,5 +4,6 @@
   <div class="col">
     <h1 class="fw-bold display-2">Whoops, we couldn't find that page!</h1>
     <p class="fs-2">The page you're looking for doesn't exist</p>
+    <a class="mt-10 fs-2 text-primary" [routerLink]="['/']">Return to home</a>
   </div>
 </div>
