--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -25,6 +25,10 @@ body {
   margin-top: 7vh;
 }
 
+textarea {
+  resize: none;
+}
+
 //.form-check-input {
 //  background-color: $primary !important;
 //}
