--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
@@ -33,7 +33,7 @@
                 <input type="number" class="form-control h-50 w-25" name="numberOfQuestions" min="1" required ngModel>
               </div>
               <div class="d-flex justify-content-between mt-4 mb-4">
-                <p class="text-secondary fs-6 fw-light">* These quizzes are local and do not save between reloads</p>
+                <p class="text-secondary fs-6 fw-light">* These quizzes do not save between reloads</p>
                 <button type="submit" class="btn btn-primary">Begin quiz</button>
               </div>
             </div>
