--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
@@ -14,7 +14,7 @@
                 <p>True/False</p>
                 <input class="form-check-input options-selector" type="checkbox" role="switch" name="trueOrFalse" [disabled]="!writtenSelected && !multipleChoiceSelected" [(ngModel)]="trueOrFalseSelected" checked>
               </div>
-              <div class="d-flex justify-content-between">
+              <div class="d-flex justify-content-between" *ngIf="set">
                 <p>Multiple Choice</p>
                 <input class="form-check-input options-selector" type="checkbox" role="switch" name="multipleChoice" [disabled]="!writtenSelected && !trueOrFalseSelected || set.cards.length < 4" [(ngModel)]="multipleChoiceSelected" checked>
               </div>
