--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -1,15 +1,15 @@
 <div class="background">
   <div class="login-desktop mt-3 me-3">
-    <button class="btn btn-lg btn-outline-light me-2" (click)="this.modalService.modal.next('login-open')">Log in</button>
-    <a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="github"><button class="btn btn-lg btn-outline-light"><fa-icon [icon]="faGithub"></fa-icon></button></a>
+    <button class="btn btn-lg btn-outline-light me-2" (click)="this.modalService.modal.next('login-open')" aria-label="Log in">Log in</button>
+    <a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="github"><button class="btn btn-lg btn-outline-light" aria-label="GitHub link"><fa-icon [icon]="faGithub"></fa-icon></button></a>
   </div>
-  <img class="logo" src="assets/scholarsome-logo-purple-lowercase.svg">
+  <img class="logo" src="assets/scholarsome-logo-purple-lowercase.svg" alt="Scholarsome">
   <div class="information">
     <h1 class="display-2 fw-bold">Studying done the <span class="text-decoration-underline">correct</span> way</h1>
     <p class="display-6 subheader">No monthly fees or upsells to get between you and your study tools. Just flashcards.</p>
     <div class="d-flex gap-2">
-      <button class="btn btn-lg btn-primary mt-4" (click)="this.modalService.modal.next('register-open')">Sign up for free</button>
-      <button class="btn btn-lg btn-outline-primary mt-4 login-mobile" (click)="this.modalService.modal.next('login-open')">Log in</button>
+      <button class="btn btn-lg btn-primary mt-4" (click)="this.modalService.modal.next('register-open')" aria-label="Sign up">Sign up for free</button>
+      <button class="btn btn-lg btn-outline-primary mt-4 login-mobile" (click)="this.modalService.modal.next('login-open')" aria-label="Log in">Log in</button>
     </div>
   </div>
 </div>
