--- a/apps/front/src/app/study-set/study-set.component.scss
+++ b/apps/front/src/app/study-set/study-set.component.scss
@@ -8,6 +8,10 @@
   text-decoration: underline;
 }
 
+.btn-light:hover {
+  border-color: #8438ff !important;
+}
+
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   .set-view {
     width: 100%;
