--- a/apps/front/src/app/homepage/homepage.component.html
+++ b/apps/front/src/app/homepage/homepage.component.html
@@ -17,7 +17,7 @@
         <div class="card shadow set-card" role="button">
           <div class="card-body">
             <h5 class="card-title">{{set.title}} <fa-icon *ngIf="set.private" [icon]="['far', 'eye-slash']"></fa-icon></h5>
-            <h6 class="card-subtitle mb-4 text-muted">{{set.cards.length}} term{{this.set.cards.length > 1 ? 's' : ''}}</h6>
+            <h6 class="card-subtitle text-muted">{{set.cards.length}} term{{this.set.cards.length > 1 ? 's' : ''}}</h6>
           </div>
         </div>
       </div>
