--- a/apps/front/src/app/profile/profile.component.html
+++ b/apps/front/src/app/profile/profile.component.html
@@ -1,1 +1,33 @@
-<p>profile works!</p>
+<div class="navbar-spacing"></div>
+
+<div class="d-flex justify-content-center mt-5" #spinner>
+  <div class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
+
+<div class="h-100 container-fluid profile-container" *ngIf="user" #container>
+  <div class="d-flex justify-content-between align-items-center h-100">
+    <div class="d-flex">
+      <fa-icon [icon]="['far', 'user']" class="display-2"></fa-icon>
+      <div class="display-2 mb-2 ms-3">{{user.username}}</div>
+    </div>
+    <div class="mt-2">
+      <p class="text-secondary">Member since {{registrationDate}}</p>
+    </div>
+  </div>
+  <div class="mt-5 mb-4" *ngIf="user">
+    <p class="fs-3">Study sets</p>
+    <div *ngFor="let set of user.sets;">
+      <a [routerLink]="['/study-set', set.id]" class="text-decoration-none">
+        <div class="mb-2 set-card">
+          <div class="card shadow">
+            <div class="card-body">
+              <h5 class="card-title">{{set.title}} <fa-icon *ngIf="set.private" [icon]="['far', 'eye-slash']"></fa-icon></h5>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
