--- a/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.scss
+++ b/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.scss
@@ -33,3 +33,9 @@
     color: #8438ff;
   }
 }
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 7680px) {
+  .container {
+    margin-top: 5vh;
+  }
+}
