Change navbar to sticky-top and fix page margins

--- a/apps/front/src/app/homepage/homepage.component.html
+++ b/apps/front/src/app/homepage/homepage.component.html
@@ -1,6 +1,4 @@
-<div class="navbar-spacing"></div>
-
-<div class="d-flex justify-content-center mt-5" #spinner>
+<div class="d-flex justify-content-center" #spinner>
   <div class="spinner-border text-primary" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
