--- a/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.scss
+++ b/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.scss
@@ -15,7 +15,6 @@
 
 .flashcard {
   min-height: 70vh;
-  margin-top: 8vh;
 }
 
 .back-arrow:hover {
@@ -36,6 +35,11 @@
 
 @media only screen and (min-device-width : 768px) and (max-device-width : 7680px) {
   .container {
+    margin-top: 5vh;
+  }
+
+  .flashcard {
+    min-height: 70vh;
     margin-top: 5vh;
   }
 }
