--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
@@ -1,7 +1,7 @@
-<div [hidden]="created" class="quiz-creator">
-  <div class="text-center rounded mb-3">
-    <h1 class="mt-3 mb-5">Create a Quiz</h1>
-    <form #optionsForm="ngForm" (ngSubmit)="beginQuiz(optionsForm)" class="fs-5 me-4" ngNativeValidate>
+<div [hidden]="created" class="quiz-creator mb-5">
+  <div class="text-center rounded">
+    <h1 class="mb-5">Create a Quiz</h1>
+    <form #optionsForm="ngForm" (ngSubmit)="beginQuiz(optionsForm)" class="fs-5 me-5" ngNativeValidate>
       <div class="form-check form-switch options-buttons">
         <div class="d-flex justify-content-between">
           <p>Written</p>
@@ -26,11 +26,11 @@
           </select>
         </div>
         <div class="d-flex justify-content-between">
-          <p class="options-text">Number of questions <span class="fs-6 fw-light text-secondary ms-2 options-disclaimer" hidden>(selecting more than 10 will create more than 1 question per card)</span></p>
+          <p class="options-text">Number of questions <span class="fs-6 fw-light text-secondary options-disclaimer" hidden>(selecting more than 10 will create more than 1 question per card)</span></p>
           <input type="number" class="form-control h-50 w-25" name="numberOfQuestions" min="1" required ngModel>
         </div>
         <div class="d-flex justify-content-between mt-4 mb-4">
-          <p class="text-secondary fs-6 fw-light">* These quizzes do not save between reloads</p>
+          <p class="text-secondary fs-6 fw-light">* Quizzes do not save between reloads</p>
           <button type="submit" class="btn btn-primary">Begin quiz</button>
         </div>
       </div>
@@ -39,8 +39,6 @@
 </div>
 
 <div *ngIf="created">
-  <div class="navbar-spacing"></div>
-
   <div class="container-fluid quiz">
     <button type="submit" class="btn btn-primary container-fluid my-5" *ngIf="submitted" (click)="reloadPage()">Take another quiz</button>
     <div class="d-flex d-flex shadow rounded quiz-question align-items-center" *ngIf="submitted">
