Fix create set inputs, remove unnecessary bootstrap js cdn import

--- a/apps/front/src/app/create/study-set/create-card/create-card.component.html
+++ b/apps/front/src/app/create/study-set/create-card/create-card.component.html
@@ -14,11 +14,11 @@
       <div class="row">
         <div class="col-lg">
           <label for="term" class="form-label">Term</label>
-          <input type="email" class="form-control" id="term" [value]="termValue ? termValue : ''" #term>
+          <input type="text" class="form-control" id="term" [value]="termValue ? termValue : ''" #term>
         </div>
         <div class="col-lg">
           <label for="definition" class="form-label">Definition</label>
-          <input type="email" class="form-control" id="definition" [value]="definitionValue ? definitionValue : ''" #definition>
+          <input type="text" class="form-control" id="definition" [value]="definitionValue ? definitionValue : ''" #definition>
         </div>
       </div>
     </div>
