--- a/apps/front/src/app/profile/profile.component.html
+++ b/apps/front/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<div class="h-100 container-fluid profile-container" *ngIf="user" #container>
+<div class="h-100 container-fluid profile-container" *ngIf="user">
   <div class="d-flex justify-content-between align-items-center h-100">
     <div class="d-flex">
       <fa-icon [icon]="['far', 'user']" class="display-2"></fa-icon>
@@ -14,7 +14,7 @@
       <p class="text-secondary">Member since {{registrationDate}}</p>
     </div>
   </div>
-  <div class="mt-5 mb-4" *ngIf="user">
+  <div class="mt-5 mb-4">
     <p class="fs-3">Study sets</p>
     <div *ngFor="let set of user.sets;">
       <a [routerLink]="['/study-set', set.id]" class="text-decoration-none">
