--- a/apps/front/src/app/profile/profile.component.scss
+++ b/apps/front/src/app/profile/profile.component.scss
@@ -9,6 +9,7 @@ a {
 
 .card:hover {
   --bs-card-border-color: #8438ff;
+  --bs-card-color: #8438ff;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
