Add legal agreements to registration and fix homepage hover colors

--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -105,7 +105,10 @@
       <div class="mb-3">
         <label for="register-password" class="form-label">Password</label>
         <input type="password" class="form-control" id="register-password" name="password" ngModel required>
-        <div class="form-text recaptcha-text">This site is protected by reCAPTCHA and the Google
+        <div class="form-text mb-3">By clicking sign up, I agree to Scholarsome's
+          <a href="https://scholarsome.com/legal/terms">Terms of Service</a> and
+          <a href="https://scholarsome.com/legal/privacy">Privacy Policy.</a></div>
+        <div class="form-text">This site is protected by reCAPTCHA and the Google
           <a href="https://policies.google.com/privacy">Privacy Policy</a> and
           <a href="https://policies.google.com/terms">Terms of Service</a> apply.</div>
       </div>
