--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -21,7 +21,9 @@
         </li>
       </ul>
       <div class="d-flex align-items-baseline">
-        <span class="navbar-text mx-3"><a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="github"><fa-icon [icon]="faGithub"></fa-icon></a></span>
+        <a *ngIf="window.location.hostname !== 'scholarsome.com' && updateAvailable" [href]="releaseUrl" target="_blank"><small class="d-inline-flex px-2 py-1 fw-semibold bg-warning text-bg-warning border border-warning-s rounded-2 text-decoration-underline me-2">New version is available</small></a>
+        <span class="navbar-text me-3 fs-6">v{{packageJson.version}}</span>
+        <span class="navbar-text me-2"><a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="github"><fa-icon [icon]="faGithub"></fa-icon></a></span>
         <div *ngIf="!signedIn">
           <button type="button" class="btn btn-outline-primary pr-6" (click)="openModal(login)">
             Log in
