--- a/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.html
+++ b/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.html
@@ -6,16 +6,22 @@
 
 <div class="container" hidden #container>
   <div class="row">
-    <div class="flashcard card text-center shadow-sm" #flashcard>
+    <div class="flashcard card text-center shadow-sm" [ngClass]="{'flip': flip}" #flashcard>
       <div class="card-body fs-1 d-flex align-items-center justify-content-center" onmousedown="return false" (click)="flipCard()"></div>
-      <hr>
-      <div class="mt-2 d-flex justify-content-around" *ngIf="cards">
-        <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3" (click)="changeCard(-1)" [disabled]="index === 0 ? true : null"><fa-icon [icon]="['far', 'arrow-alt-circle-left']"></fa-icon></button>
-        <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3" (click)="changeCard(1)" [disabled]="cards.length === index + 1 ? true : null"><fa-icon [icon]="['far', 'arrow-alt-circle-right']"></fa-icon></button>
-      </div>
-      <div class="mx-2 d-flex justify-content-between">
-        <p class="text-secondary">{{side}}</p>
-        <fa-icon class="fs-4 mb-2 text-secondary shuffle" (click)="this.shuffleCards()" [style.color]="shufflingEnabled ? '#8438ff !important' : '#6c757d !important'" [icon]="faShuffle"></fa-icon>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="card text-center shadow-sm">
+      <div class="card-body">
+        <div class="mt-2 d-flex justify-content-around" *ngIf="cards">
+          <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3" (click)="changeCard(-1)" [disabled]="index === 0 ? true : null"><fa-icon [icon]="['far', 'arrow-alt-circle-left']"></fa-icon></button>
+          <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3" (click)="changeCard(1)" [disabled]="cards.length === index + 1 ? true : null"><fa-icon [icon]="['far', 'arrow-alt-circle-right']"></fa-icon></button>
+        </div>
+        <div class="mx-2 d-flex justify-content-between">
+          <p class="text-secondary">{{side}}</p>
+          <fa-icon class="fs-4 mb-2 text-secondary shuffle" (click)="this.shuffleCards()" [style.color]="shufflingEnabled ? '#8438ff !important' : '#6c757d !important'" [icon]="faShuffle"></fa-icon>
+        </div>
       </div>
     </div>
   </div>
