--- a/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.scss
+++ b/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.scss
@@ -14,13 +14,23 @@
   cursor: pointer;
 }
 
-.flashcard.flip {
-  animation: flip_card_body 0.5s;
+.flashcard.flip-back {
+  animation: flip-card-body-back 0.5s;
   animation-fill-mode: forwards;
 }
 
-.flashcard.flip > .card-body {
-  animation: flip-card_text 0s;
+.flashcard.flip-back > .card-body {
+  animation: flip-card-text-back 0s 0.10s;
+  animation-fill-mode: forwards;
+}
+
+.flashcard.flip-forwards {
+  animation: flip-card-body-forwards 0.5s;
+  animation-fill-mode: forwards;
+}
+
+.flashcard.flip-forwards > .card-body {
+  animation: flip-card-text-forwards 0s 0.10s;
   animation-fill-mode: forwards;
 }
 
@@ -30,7 +40,7 @@
   cursor: pointer;
 }
 
-@keyframes flip-card_text {
+@keyframes flip-card-text-back {
   0% {
     transform: rotateX(0deg);
   }
@@ -40,7 +50,7 @@
   }
 }
 
-@keyframes flip_card_body {
+@keyframes flip-card-body-back {
   0% {
     transform: rotateX(0deg);
     background-color: white;
@@ -49,6 +59,28 @@
   100% {
     transform: rotateX(180deg);
     background-color: #f6f7fb;
+  }
+}
+
+@keyframes flip-card-text-forwards {
+  0% {
+    transform: rotateX(0deg);
+  }
+
+  100% {
+    transform: rotateX(-180deg);
+  }
+}
+
+@keyframes flip-card-body-forwards {
+  0% {
+    transform: rotateX(0deg);
+    background-color: #f6f7fb;
+  }
+
+  100% {
+    transform: rotateX(-180deg);
+    background-color: white;
   }
 }
 
@@ -68,6 +100,6 @@
   }
 
   .flashcard {
-    min-height: 65vh;
+    min-height: 60vh;
   }
 }
